--- a/home.html
+++ b/home.html
@@ -23,7 +23,27 @@
     <section id="header">
       <h1 id="stay">Reflect Simple</h1>
       <h2>Write in one place, keep your thoughts organized and share on your favorite platforms</h2>
-      <input placeholder="Stay up to date on the progress.." />
+      <!-- <input placeholder="Stay up to date on the progress.." /> -->
+      <!-- Begin MailChimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
+      <div id="mc_embed_signup">
+      <form action="//twitter.us10.list-manage.com/subscribe/post?u=b8dc9c8a56f52bac1dd19f3e7&amp;id=57d7b9ea4c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+        
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email and stay in the loop" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8dc9c8a56f52bac1dd19f3e7_57d7b9ea4c" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="I dig" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+      </div>
+
+      <!--End mc_embed_signup-->
     </section>
 
     <!-- tri section - what does this app do? -->
