--- a/home.html
+++ b/home.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Hello</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <title>Reflect Simple</title>
+    <meta name="description" content="Write in one place, keep your thoughts organized and share on your favorite platforms">
+    <meta name="author" content="Yeddie">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+
 
     <link rel="stylesheet" href="style.css">
 
@@ -82,7 +84,7 @@
       </ul>
     </section>
 
-    <footer>Currently in the works. Want to stay up to date? <a href="#stay">Yes!</a></footer>
+    <footer>We are currently in the lab working on this fine product.<br>Want to stay up to date? <a href="#stay">Yes!</a></footer>
 
   </body>
 
