--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Reflect Simple</title>
+    <title>About : Reflect Simple</title>
     <meta name="description" content="Write in one place, keep your thoughts organized, share on your favorite platforms and reflect on life">
     <meta name="author" content="Yeddie">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
@@ -29,7 +29,7 @@
 
   </head>
 
-  <body>
+  <body id="about">
     <div id="topNav">
       <ul>
         <li><a href="home.html">home</a></li>
@@ -64,34 +64,51 @@
       </div>
     </section>
 
-    <!-- tri section - what does this app do? -->
-    <section id="info">
-      <div>
-        <div>
-          <img src="images/compandphone.png" alt="Write"/>
-          <p>Jot down your thoughts on desktop or on your iphone, with no distractions.<p>
-        </div>
-        <div>
-          <img src="images/previewposts.png" alt="Read"/>
-          <p>Categorize each post you write to stay organized and find what you are looking for.<p>
-        </div>
-        <div>
-          <img src="images/book.png" alt="Book"/>
-          <p>With a click of a button, turn your thoughts into a book. Reflect on your past posts and grow.<p>
-        </div>
-      </div>
-    </section>
+    <section id="posts">
+      <h4>The Story</h4>
+      <p>
+        I was constantly writing on different things - such as wordpress, twitter, my journal,
+        notes on iphone and even random paper. If I needed to find a note I wrote down, chances are 
+        I wouldn't be able to find it.
+        <br>
+        <br>
 
-    <!-- tri section - easily post to different mediums -->
-    <hr>
-    <section id="social">
-      <h3>Easily share your thoughts with the world</h3>
-      <ul>
-        <li><img src="images/medium-icon.png"/></li>
-        <li><img src="images/wordpress-icon.png"/></li>
-        <li><img src="images/twitter-icon.png"/></li>
-      </ul>
+        As I was noticing this trend I was currently working on another app. One that would help you reflect on life every week, month and year. It would be a reminder to 
+        sit and be remembered of your life. This is a life tool that I picked up a few years ago, but 
+        has always been difficult to stay consistent. 
+        <br>
+        <br>
+
+        I worked on this life review reminder application for quite some time, talked to a few people
+        about it, and eventually stopped working on it. Just like many of my other projects. 
+        <br>
+        <br>
+
+        About half a year later, I still desired to have something similar and started to rethink my 
+        approach. This is when Reflect Simple was born.
+        <br>
+        <br>
+
+        The idea is this, a web and ios app that is two things. One, a non distracting way to take notes, thoughts and blog posts and categorize them so I can easily find them later as well as
+        post to some of my favorite social media outlets. And two, a way to reflect on that I have 
+        written. I decided to create a book out of my notes. Then when I receive the book in the 
+        mail, I simply sit down and read it, reflect and grow.
+        <br>
+        <br>
+
+        This tool I hope to be helpful to many. As I continue to build it and work out the details, 
+        <a href="#stay">sign up</a> and stay in the loop.
+        <br>
+        <br>
+        <br>
+
+        Thanks for reading!
+        <br>
+        Chris
+
+      </p>
     </section>
+    
 
     <footer>We are currently in the lab working on this fine product.<br>Want to stay up to date? <a href="#stay">Yes!</a></footer>
 
