--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Cabin:400,600italic' rel='stylesheet' type='text/css'>
 
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,17 +33,19 @@
   </head>
 
   <body>
-    <div id="topNav">
+    <!-- <div id="topNav">
       <ul>
         <li><a href="home.html">home</a></li>
         <li><a href="about.html">about</a></li>
       </ul>
-    </div>
+    </div> -->
 
     <section id="header">
       <div>
-        <h1 id="stay">Reflect Simple</h1>
-        <h2>Write in one place, keep your thoughts organized, share on your favorite platforms and reflect on life</h2>
+        <h1 id="stay">Connect, Reflect, Grow</h1>
+        <h2>Turn your social media into a life reflection tool</h2>
+
+          <!-- Write in one place, keep your thoughts organized, share on your favorite platforms and reflect on life</h2> -->
         <!-- <input placeholder="Stay up to date on the progress.." /> -->
         <!-- Begin MailChimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
@@ -65,7 +70,7 @@
     </section>
 
     <!-- tri section - what does this app do? -->
-    <section id="info">
+    <!-- <section id="info">
       <div>
         <div>
           <img src="images/compandphone.png" alt="Write"/>
@@ -80,10 +85,10 @@
           <p>With a click of a button, turn your thoughts into a book. Reflect on your past posts and grow.<p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- tri section - easily post to different mediums -->
-    <hr>
+    <!-- <hr>
     <section id="social">
       <h3>Easily share your thoughts with the world</h3>
       <ul>
@@ -93,7 +98,7 @@
       </ul>
     </section>
 
-    <footer>We are currently in the lab working on this fine product.<br>Want to stay up to date? <a href="#stay">Yes!</a></footer>
+    <footer>We are currently in the lab working on this fine product.<br>Want to stay up to date? <a href="#stay">Yes!</a></footer> -->
 
   </body>
 
