--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Reflect Simple</title>
-    <meta name="description" content="Write in one place, keep your thoughts organized, share on your favorite platforms and reflect on life">
+    <title>CRG - Connect, Reflect Grow</title>
+    <meta name="description" content="Turn your social media into a life reflection tool. Get in the know by signin up!">
     <meta name="author" content="Yeddie">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
